force-app/main/default/objects/Form_LCF_Grant_Payment_Profile_1__c/Form_LCF_Grant_Payment_Profile_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Payment Profile - 1.0</description>
    <label>Form LCF Grant Payment Profile 1.0</label>
    <nameField>
        <displayFormat>GPP-{00000}</displayFormat>
        <label>Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Payment Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>