force-app/main/default/objects/Form_LCF_Grant_Payment_Profile_1__c/fields/pp_block_status__c.field-meta.xml
<CustomField>
    <fullName>pp_block_status__c</fullName>
    <description>Processing status of block</description>
    <inlineHelpText>Processing status of block</inlineHelpText>
    <label>Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Block_Status</valueSetName>
    </valueSet>
</CustomField>