force-app/main/default/objects/Form_LCF_Grant_Payment_Profile_1__c/fields/pp_payment_claim_schedule__c.field-meta.xml
<CustomField>
    <fullName>pp_payment_claim_schedule__c</fullName>
    <inlineHelpText>Are payments to be claimed on a 3-monthly or 6-monthly basis?</inlineHelpText>
    <label>PP - Payment Claim Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-monthly</fullName>
            </value>
            <value>
                <fullName>6-monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>