force-app/main/default/objects/Form_LCF_Grant_Payment_Profile_1__c/fields/pp_payment_profile_files__c.field-meta.xml
<CustomField>
    <fullName>pp_payment_profile_files__c</fullName>
    <inlineHelpText>Please upload the latest payment profile</inlineHelpText>
    <label>PP - Payment Profile Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>