force-app/main/default/objects/Form_LCF_Grant_Payment_Profile_1__c/fields/pp_section_status__c.field-meta.xml
<CustomField>
    <fullName>pp_section_status__c</fullName>
    <label>PP - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>